force-app/main/default/objects/clariti__PaymentAllocation__c/clariti__PaymentAllocation__c.object-meta.xml
<CustomObject>
    <description>Payment Allocation is used to record amounts against the individual payable items e.g. Fees, Deposits, etc.</description>
    <label>Payment Allocation</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Payment Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>