force-app/main/default/objects/clariti__PaymentAllocation__c/fields/AVO_Compliance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance</label>
    <referenceTo>AVO_Compliance__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>