force-app/main/default/objects/clariti__PaymentAllocation__c/fields/clariti__AllocationAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__AllocationAmount__c</fullName>
    <description>The payment amount applied to the associated payable (fee/invoice/deposit). The system populates this during payment processing.</description>
    <label>Allocation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>