force-app/main/default/objects/clariti__PaymentAllocation__c/fields/clariti__CartItem__c.field-meta.xml
<CustomField>
    <fullName>clariti__CartItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated cart item record. The System populates this during payment processing.</description>
    <label>Cart Item</label>
    <referenceTo>clariti__CartItem__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>PaymentAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>