force-app/main/default/objects/clariti__PaymentAllocation__c/fields/clariti__OriginalPaymentAllocation__c.field-meta.xml
<CustomField>
    <fullName>clariti__OriginalPaymentAllocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Payment Allocation</label>
    <referenceTo>clariti__PaymentAllocation__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>