force-app/main/default/objects/clariti__PaymentAllocation__c/fields/clariti__ParentRecordId__c.field-meta.xml
<CustomField>
    <fullName>clariti__ParentRecordId__c</fullName>
    <label>Parent Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>