force-app/main/default/objects/clariti__PaymentAllocation__c/fields/clariti__Payment__c.field-meta.xml
<CustomField>
    <fullName>clariti__Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>clariti__Payment__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>PaymentAllocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>