force-app/main/default/objects/clariti__PaymentAllocation__c/fields/clariti__SourceDeposit__c.field-meta.xml
<CustomField>
    <fullName>clariti__SourceDeposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Deposit</label>
    <referenceTo>clariti__Deposit__c</referenceTo>
    <relationshipLabel>Payment Allocations (Source)</relationshipLabel>
    <relationshipName>PaymentAllocationsSource</relationshipName>
    <type>Lookup</type>
</CustomField>