force-app/main/default/objects/clariti__PaymentAllocation__c/fields/clariti__TargetDeposit__c.field-meta.xml
<CustomField>
    <fullName>clariti__TargetDeposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Deposit</label>
    <referenceTo>clariti__Deposit__c</referenceTo>
    <relationshipLabel>Payment Allocations (Target)</relationshipLabel>
    <relationshipName>PaymentAllocationsTarget</relationshipName>
    <type>Lookup</type>
</CustomField>