force-app/main/default/objects/clariti__PaymentAllocation__c/fields/clariti__TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>clariti__TransactionDate__c</fullName>
    <description>Date and time when the cart was processed. The System populates this during payment processing.</description>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>